Fix list item image size to prevent layout shifts

--- a/src/components/listItem/styles.module.scss
+++ b/src/components/listItem/styles.module.scss
@@ -3,8 +3,9 @@
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   picture {
+    height: 180px;
     img {
-      max-height: 11.25rem;
+      max-height: 180px;
       width: 100%;
       object-fit: contain;
       object-position: center;
